fix filter and section  search-events

--- a/src/html/includes/search-events.html
+++ b/src/html/includes/search-events.html
@@ -1,6 +1,6 @@
 <section class="search-events custom-section">
-  <div class="search-events__map-link">
-    <div class="search-events__map-icon">
+  <a href="#" class="search-events__map-link">
+    <span class="search-events__map-link-icon">
       <!-- snippets icon_map -->
       <svg viewBox="0 0 24 21" fill="none">
         <path
@@ -11,9 +11,9 @@
           stroke-linejoin="round"
         />
       </svg>
-    </div>
-    <span class="search-events__map-text">Показать на карте</span>
-  </div>
+    </span>
+    <span class="search-events__map-link-text">Показать на карте</span>
+  </a>
   <div class="search-events__content">
     <div class="search-events__filter">
       <!-- snippets filter -->
@@ -42,6 +42,7 @@
               <input checked type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -56,6 +57,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -70,6 +72,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -84,6 +87,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -98,6 +102,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -112,6 +117,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -126,6 +132,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -140,6 +147,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -154,6 +162,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -168,6 +177,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -182,6 +192,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -196,6 +207,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -210,6 +222,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -224,6 +237,7 @@
               <input type="checkbox" class="filter__item-checkbox-false" />
               <span class="filter__item-checkbox-true">
                 <span class="filter__item-checkbox-icon">
+                  <!-- snippets icon_mark -->
                   <svg viewBox="0 0 14 14" fill="none">
                     <path
                       d="M11.9574 0.820312L5.54258 9.27773L1.75 5.48789L0 7.23789L5.83242 13.0703L14 2.57031L11.9574 0.820312Z"
@@ -246,7 +260,6 @@
         </div>
       </div>
     </div>
-
     <div class="search-events__cards">
       <!-- snippets search-card -->
       <div class="search-events__card">
@@ -254,7 +267,7 @@
           <picture class="search-events__card-picture">
             <source srcset="../../img/img-card.png 1x, ../../img/img-card.png 2x" />
             <img
-              class=".search-events__card-img"
+              class="&__card-img"
               alt=""
               loading="lazy"
               src="../../img/img-card.png"
@@ -376,7 +389,7 @@
           <picture class="search-events__card-picture">
             <source srcset="../../img/img-card.png 1x, ../../img/img-card.png 2x" />
             <img
-              class=".search-events__card-img"
+              class="&__card-img"
               alt=""
               loading="lazy"
               src="../../img/img-card.png"
@@ -499,7 +512,7 @@
           <picture class="search-events__card-picture">
             <source srcset="../../img/img-card.png 1x, ../../img/img-card.png 2x" />
             <img
-              class=".search-events__card-img"
+              class="&__card-img"
               alt=""
               loading="lazy"
               src="../../img/img-card.png"
@@ -622,7 +635,7 @@
           <picture class="search-events__card-picture">
             <source srcset="../../img/img-card.png 1x, ../../img/img-card.png 2x" />
             <img
-              class=".search-events__card-img"
+              class="&__card-img"
               alt=""
               loading="lazy"
               src="../../img/img-card.png"
