--- a/src/scss/blocks/banner.scss
+++ b/src/scss/blocks/banner.scss
@@ -1,16 +1,27 @@
 .banner {
-  max-width: 100%;
-  background: var(--color-bg-0, #ffffff);
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
-  height: 200px;
+  background: var(--color-bg-0, #ffffff);
 
-  .banner__container {
+  &__image--false {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100%;
+
+    picture {
+      display: none;
+    }
   }
-  .banner__content {
+
+  &__image--true {
+    .banner__content {
+      display: none;
+    }
+  }
+
+  &__content {
     font-weight: 500;
     font-size: 28px;
     line-height: 32.81px;
