--- a/src/scss/sections/home.scss
+++ b/src/scss/sections/home.scss
@@ -70,15 +70,21 @@
 
 .advertising {
   @include media-breakpoint-up(xl) {
-    padding: 112px clamp(100px, 16vw, 259px) 100px;
+    padding: 112px 259px 100px;
   }
 
   @include media-breakpoint-between(md, xxl) {
-    padding: 112px clamp(20px, 11vw, 180px) 100px;
+    padding: 112px 180px 100px;
   }
 
   @include media-breakpoint-down(md) {
     display: none;
+  }
+
+  &__container {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
   }
 }
 
