add section reviews

--- a/src/html/includes/current_events.html
+++ b/src/html/includes/current_events.html
@@ -387,7 +387,7 @@
       </div>
     </div>
   </div>
-  <div class="current-events__btn">
+  <div class="current-events__button">
     <!-- snippets button -->
     <button class="button" type="button">
       <span class="button__text"> Смотреть ещё </span>
