--- a/src/html/includes/institution.html
+++ b/src/html/includes/institution.html
@@ -339,5 +339,10 @@
       </div>
     </div>
   </div>
-  <button class="institution__btn-more custom-btn" type="button">Загрузить ещё</butto>
+  <div class="institution__button">
+    <!-- snippets button -->
+    <button class="button" type="button">
+      <span class="button__text"> Загрузить ещё </span>
+    </button>
+  </div>
 </section>
