--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -18,7 +18,7 @@ var htmlTop = { title: "ArtTube" };
   <%=_.template(require('./../includes/event-full.html').default)()%>
   <%=_.template(require('./../includes/event_map.html').default)()%>
   <%=_.template(require('./../includes/event_banner.html').default)()%>
-  <%=_.template(require('./../includes/event_reviews.html').default)()%>
+  <%=_.template(require('./../includes/reviews.html').default)()%>
 </main>
 
 <%=_.template(require('./../includes/footer.html').default)()%>
