--- a/src/scss/base/reboot.scss
+++ b/src/scss/base/reboot.scss
@@ -59,7 +59,7 @@ button {
   cursor: pointer;
   border: none;
   background: transparent;
-  font-size: var(--typography-htmlFontSize);
+  // font-size: var(--typography-htmlFontSize);
 }
 
 input,
