--- a/src/html/includes/join.html
+++ b/src/html/includes/join.html
@@ -2,7 +2,12 @@
   <div class="join__container">
     <div class="join__content">
       <p class="join__text">Получать обновления</p>
-      <button class="join__btn custom-btn">Подписаться</button>
+      <div class="join__button">
+        <!-- snippets button -->
+        <button class="button" type="button">
+          <span class="button__text"> Подписаться </span>
+        </button>
+      </div>
     </div>
     <img src="/img/join.png" alt="" class="join__img-bg" />
   </div>
