--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -13,6 +13,7 @@
   --color-text-700: #333333;
 
   --color-btn: #ff711f;
+  --color-btn-secondary: #219653;
 
   --color-bg-100: #f5f5f5;
   --color-bg: #f7f7f4;
@@ -31,24 +32,16 @@
 
   --typography-htmlFontSize: 16px;
   --typography-fontFamily: Roboto, sans-serif;
-  // --typography-fontWeightLight: 300;
-  // --typography-fontWeightMedium: 500;
-  // --typography-fontWeightBold: 700;
-
-  // --filters-blur: 10px;
-  // --filters-opacity: 0.5;
-
-  // --spacing-container: 24px;
 }
 
-// section {
-//   margin-top: var(--margin-top, 0);
-//   margin-bottom: var(--margin-bottom, 0);
-// }
+section {
+  margin-top: var(--margin-top, 0);
+  margin-bottom: var(--margin-bottom, 0);
+}
 
-// @include media-breakpoint-down(sm) {
-//   section {
-//     --margin-top: var(--margin-top-mobile, 0);
-//     --margin-bottom: var(--margin-bottom-mobile, 0);
-//   }
-// }
+@include media-breakpoint-down(sm) {
+  section {
+    --margin-top: var(--margin-top-mobile, 0);
+    --margin-bottom: var(--margin-bottom-mobile, 0);
+  }
+}
