--- a/src/scss/sections/event-detail.scss
+++ b/src/scss/sections/event-detail.scss
@@ -233,3 +233,263 @@
     height: 200px;
   }
 }
+
+.reviews {
+  &__container {
+    display: flex;
+    flex-direction: column;
+    max-width: 1090px;
+  }
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+
+    @include media-breakpoint-up(md) {
+      margin-bottom: 76px;
+    }
+
+    @include media-breakpoint-down(md) {
+      padding: 0 20px;
+      margin-bottom: 20px;
+    }
+  }
+
+  &__header-title {
+    font-weight: 400;
+    color: var(--color-text-primary, #100e0e);
+
+    @include media-breakpoint-up(md) {
+      font-size: 42px;
+      line-height: 49.22px;
+    }
+
+    @include media-breakpoint-down(md) {
+      font-size: 24px;
+      line-height: 28.13px;
+    }
+  }
+
+  &__header-buttons {
+    display: flex;
+
+    @include media-breakpoint-up(md) {
+      gap: 10px;
+    }
+
+    @include media-breakpoint-down(md) {
+      gap: 7px;
+    }
+  }
+
+  &__header-button {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: var(--color-text-900, #ffffff);
+
+    @include media-breakpoint-up(md) {
+      padding: 14px 25px;
+    }
+
+    @include media-breakpoint-down(md) {
+      padding: 9px 12px;
+    }
+  }
+
+  &__header-button-like {
+    background: var(--color-btn-secondary, #219653);
+  }
+
+  &__header-button-user {
+    background: var(--color-btn, #ff711f);
+  }
+
+  &__header-button-icon {
+    width: 22px;
+    height: 22px;
+  }
+
+  &__header-button-text {
+    line-height: 11.2px;
+    color: inherit;
+  }
+
+  &__reviews {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    @include media-breakpoint-up(md) {
+      margin-bottom: 87px;
+    }
+
+    @include media-breakpoint-down(md) {
+      padding: 0 20px;
+      margin-bottom: 30px;
+    }
+  }
+
+  &__review {
+    display: flex;
+
+    @include media-breakpoint-up(md) {
+      gap: 20px;
+    }
+
+    @include media-breakpoint-down(md) {
+      flex-direction: column;
+      gap: 25px;
+    }
+  }
+
+  &__review-image {
+    flex: 1 0 auto;
+    border-radius: 50%;
+    background: #d9d9d9;
+
+    @include media-breakpoint-up(md) {
+      width: 120px;
+      height: 120px;
+    }
+
+    @include media-breakpoint-down(md) {
+      width: 60px;
+      height: 60px;
+    }
+  }
+
+  &__review-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    color: var(--color-text-700, #333333);
+  }
+
+  &__review-content-text {
+    color: inherit;
+
+    @include media-breakpoint-down(md) {
+      font-size: 17px;
+      line-height: 25.5px;
+    }
+
+    @include media-breakpoint-down(md) {
+      font-size: 15px;
+      line-height: 22.5px;
+    }
+  }
+
+  &__review-user-name {
+    font-weight: 500;
+    font-style: italic;
+
+    color: inherit;
+
+    @include media-breakpoint-up(md) {
+      font-size: 24px;
+      line-height: 36px;
+    }
+
+    @include media-breakpoint-down(md) {
+      font-size: 18px;
+      line-height: 27px;
+    }
+  }
+
+  &__form {
+    border: 1px solid var(--color-border);
+    background: var(--color-bg-0, #ffffff);
+
+    @include media-breakpoint-up(md) {
+      padding: 50px;
+    }
+
+    @include media-breakpoint-down(md) {
+      padding: 30px 20px;
+    }
+  }
+
+  &__form-title {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28.13px;
+    color: var(--color-btn-primary, #100e0e);
+
+    @include media-breakpoint-up(md) {
+      margin-bottom: 34px;
+    }
+
+    @include media-breakpoint-down(md) {
+      margin-bottom: 26px;
+    }
+  }
+
+  &__form-content {
+    display: flex;
+    margin-bottom: 32px;
+
+    @include media-breakpoint-up(md) {
+      gap: 55px;
+      margin-bottom: 32px;
+    }
+
+    @include media-breakpoint-down(md) {
+      flex-direction: column;
+      gap: 25px;
+      margin-bottom: 25px;
+    }
+  }
+
+  &__form-content-data {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    width: 100%;
+
+    @include media-breakpoint-up(md) {
+      max-width: 375px;
+    }
+  }
+
+  &__form-input {
+    height: 50px;
+  }
+
+  &__form-input,
+  &__form-review-input {
+    padding: 15px 25px;
+    font-size: 18px;
+    border: 1px solid var(--color-border);
+    color: var(--color-text-primary, #100e0e);
+
+    &::placeholder {
+      color: var(--color-text-primary-25, #100e0e40);
+    }
+  }
+
+  &__form-content-review {
+    flex: content;
+  }
+
+  &__form-review-input {
+    width: 100%;
+    height: 100%;
+
+    @include media-breakpoint-up(md) {
+      min-width: 250px;
+    }
+
+    @include media-breakpoint-down(md) {
+      min-height: 175px;
+    }
+  }
+
+  &__form-button {
+    max-width: 192px;
+    font-size: 15px;
+  }
+}
