add page institution detail

--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -32,6 +32,8 @@
 
   --typography-htmlFontSize: 16px;
   --typography-fontFamily: Roboto, sans-serif;
+
+  --border-primary: 1px solid var(--color-border);
 }
 
 section {
