--- a/src/html/includes/search.html
+++ b/src/html/includes/search.html
@@ -5,6 +5,11 @@
       <input type="date" class="search__input" />
     </div>
 
-    <button class="search__btn custom-btn-primary">найти</button>
+    <div class="search__button">
+      <!-- snippets button -->
+      <button class="button" type="button">
+        <span class="button__text"> найти </span>
+      </button>
+    </div>
   </form>
 </div>
