--- a/src/scss/base/reboot.scss
+++ b/src/scss/base/reboot.scss
@@ -79,3 +79,13 @@ img {
   width: 100%;
   height: 100%;
 }
+
+main {
+  @include media-breakpoint-up(md) {
+    margin: 80px 0 160px;
+  }
+
+  @include media-breakpoint-down(md) {
+    margin: 20px 0 50px;
+  }
+}
