--- a/src/scss/blocks/search.scss
+++ b/src/scss/blocks/search.scss
@@ -2,23 +2,25 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-top: 1px solid var(--color-border);
   background: var(--color-bg-0);
 
-  .search__form {
+  &__form {
     display: flex;
     align-items: center;
-    padding: 25px 20px;
 
     @include media-breakpoint-up(md) {
       gap: 15px;
+      padding: 25px 20px;
     }
 
     @include media-breakpoint-down(md) {
       flex-direction: column;
       gap: 10px;
+      padding: 12px 20px;
     }
   }
-  .search__inputs {
+  &__inputs {
     display: flex;
 
     @include media-breakpoint-up(md) {
@@ -29,12 +31,28 @@
       width: 100%;
     }
   }
-  .search__input {
+  &__input {
     width: 100%;
     height: 50px;
     font-size: 18px;
     border: 1px solid var(--color-border);
     text-align: center;
     color: var(--color-light-black);
+  }
+
+  &__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 50px;
+    overflow: hidden;
+
+    @include media-breakpoint-up(md) {
+      width: 114px;
+    }
+
+    @include media-breakpoint-down(md) {
+      width: 100%;
+    }
   }
 }
