--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -28,6 +28,7 @@
 @import "sections/home";
 @import "sections/search";
 @import "sections/event-detail";
+@import "sections/institution_detail";
 @import "sections/footer";
 
 // Templates
