--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -9,7 +9,7 @@ var htmlTop = { title: "ArtTube" };
   <%=_.template(require('./../includes/hero.html').default)()%>
   <%=_.template(require('./../includes/home_banner.html').default)()%>
   <%=_.template(require('./../includes/current_events.html').default)()%>
-  <%=_.template(require('./../includes/blog.html').default)()%>
+  <%=_.template(require('./../includes/blog_latest.html').default)()%>
   <%=_.template(require('./../includes/gallery.html').default)()%>
   <%=_.template(require('./../includes/join.html').default)()%>
   <%=_.template(require('./../includes/search.html').default)()%>
