--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,6 +18,7 @@
 @import "blocks/search";
 @import "blocks/card-institution";
 @import "blocks/card_event";
+@import "blocks/card_primary";
 
 @import "blocks/title";
 @import "blocks/section";
@@ -29,6 +30,7 @@
 @import "sections/search";
 @import "sections/event-detail";
 @import "sections/institution_detail";
+@import "sections/blog";
 @import "sections/footer";
 
 // Templates
