--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,7 +21,6 @@
 @import "blocks/card_primary";
 
 @import "blocks/title";
-@import "blocks/section";
 @import "blocks/custom-scroll";
 
 // Sections
@@ -31,6 +30,7 @@
 @import "sections/event-detail";
 @import "sections/institution_detail";
 @import "sections/blog";
+@import "sections/map";
 @import "sections/footer";
 
 // Templates
