--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -47,3 +47,21 @@ section {
     --margin-bottom: var(--margin-bottom-mobile, 0);
   }
 }
+
+.custom-section {
+  @include media-breakpoint-up(xl) {
+    padding: 0 100px;
+  }
+
+  @include media-breakpoint-between(sm, xl) {
+    padding: 0 50px;
+  }
+
+  // @include media-breakpoint-between(md, xl) {
+  //   padding: 0 85px;
+  // }
+
+  @include media-breakpoint-down(sm) {
+    padding: 0;
+  }
+}
