--- a/src/scss/blocks/filter.scss
+++ b/src/scss/blocks/filter.scss
@@ -1,8 +1,10 @@
 .filter {
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
-  background: white;
-  border: 1px solid #0000001a;
+  max-height: 100%;
+  background: var(--color-bg-0, #ffffff);
+  border: 1px solid var(--color-border);
 
   #checkbox-filter-size {
     display: none;
@@ -30,7 +32,7 @@
 
     @include media-breakpoint-up(md) {
       padding: 20px 30px;
-      pointer-events: none;
+      // pointer-events: none;
     }
 
     @include media-breakpoint-down(md) {
@@ -56,11 +58,11 @@
   &__header-icon {
     width: 24px;
     height: 24px;
-    transition: 0.3s;
+    transition: 0.2s;
 
-    @include media-breakpoint-up(md) {
-      display: none;
-    }
+    // @include media-breakpoint-up(md) {
+    //   display: none;
+    // }
   }
 
   &__content {
@@ -147,7 +149,7 @@
 
   &__button-complete,
   &__button-reset {
-    padding: 15px;
+    height: 40px;
     border: 2px solid var(--color-text-primary);
   }
 
