--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -103,14 +103,14 @@
       </div>
       <div class="header__nav">
         <div class="header__nav-links">
-          <a href="#" class="header__nav-link">Главная</a>
+          <a href="/" class="header__nav-link">Главная</a>
           <a href="#" class="header__nav-link">События</a>
           <a href="#" class="header__nav-link">Парусная команда</a>
           <a href="#" class="header__nav-link">Личный блог Валерии Коваленко</a>
           <a href="#" class="header__nav-link">Arttube.Editions</a>
           <a href="#" class="header__nav-link">Специальный проект</a>
           <a href="#" class="header__nav-link">Партнеры</a>
-          <a href="#" class="header__nav-link">Блог</a>
+          <a href="/blog.html" class="header__nav-link">Блог</a>
           <a href="#" class="header__nav-link">О проекте</a>
           <a href="#" class="header__nav-link">Контакты</a>
         </div>
