--- a/src/html/includes/search-events.html
+++ b/src/html/includes/search-events.html
@@ -1,5 +1,5 @@
 <section class="search-events custom-section">
-  <a href="#" class="search-events__map-link">
+  <a href="/map.html" class="search-events__map-link">
     <span class="search-events__map-link-icon">
       <!-- snippets icon_map -->
       <svg viewBox="0 0 24 21" fill="none">
