--- a/src/html/templates/search_institution.html
+++ b/src/html/templates/search_institution.html
@@ -7,7 +7,8 @@ var htmlTop = { title: "ArtTube" };
 
 
 <main>
-  <%=_.template(require('./../includes/search-events.html').default)()%>
+    <%=_.template(require('./../includes/search_mini.html').default)()%>
+    <%=_.template(require('./../includes/institution.html').default)()%>
 </main>
 
 
