--- a/src/html/templates/blog.html
+++ b/src/html/templates/blog.html
@@ -5,9 +5,8 @@ var htmlTop = { title: "ArtTube blog" };
 <%=_.template(require('./../includes/_html-top.html').default)(htmlTop)%>
 <%=_.template(require('./../includes/header.html').default)()%>
 
-<%=_.template(require('./../includes/search.html').default)()%>
-
 <main>
+    <%=_.template(require('./../includes/search_mini.html').default)()%>
     <%=_.template(require('./../includes/blog.html').default)()%>
 </main>
 
