--- a/src/html/templates/event_detail.html
+++ b/src/html/templates/event_detail.html
@@ -5,11 +5,13 @@ var htmlTop = { title: "ArtTube" };
 <%=_.template(require('./../includes/_html-top.html').default)(htmlTop)%>
 <%=_.template(require('./../includes/header.html').default)()%>
 
+
 <main>
   <%=_.template(require('./../includes/search_mini.html').default)()%>
-  <%=_.template(require('./../includes/institution_info.html').default)()%>
-  <%=_.template(require('./../includes/tabs.html').default)()%>
-  <%=_.template(require('./../includes/institution_map.html').default)()%>
+  <%=_.template(require('./../includes/event-full.html').default)()%>
+  <%=_.template(require('./../includes/event_map.html').default)()%>
+  <%=_.template(require('./../includes/event_banner.html').default)()%>
+  <%=_.template(require('./../includes/reviews.html').default)()%>
 </main>
 
 
