--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -7,19 +7,12 @@ var htmlTop = { title: "ArtTube" };
 
 <main>
   <%=_.template(require('./../includes/hero.html').default)()%>
+  <%=_.template(require('./../includes/search_full.html').default)()%>
   <%=_.template(require('./../includes/home_banner.html').default)()%>
   <%=_.template(require('./../includes/current_events.html').default)()%>
   <%=_.template(require('./../includes/blog_latest.html').default)()%>
   <%=_.template(require('./../includes/gallery.html').default)()%>
   <%=_.template(require('./../includes/join.html').default)()%>
-  <%=_.template(require('./../includes/search.html').default)()%>
-  <%=_.template(require('./../includes/search-events.html').default)()%>
-  <%=_.template(require('./../includes/institution.html').default)()%>
-  <%=_.template(require('./../includes/event-full.html').default)()%>
-  <%=_.template(require('./../includes/event_map.html').default)()%>
-  <%=_.template(require('./../includes/event_banner.html').default)()%>
-  <%=_.template(require('./../includes/reviews.html').default)()%>
-
 </main>
 
 <%=_.template(require('./../includes/footer.html').default)()%>
