--- a/src/html/includes/search_mini.html
+++ b/src/html/includes/search_mini.html
@@ -1,11 +1,11 @@
-<div class="search">
-  <form class="search__form">
-    <div class="search__inputs">
-      <input type="text" class="search__input" value="Санкт-Петербург" />
-      <input type="date" class="search__input" />
+<div class="search-mini">
+  <form class="search-mini__form">
+    <div class="search-mini__inputs">
+      <input type="text" class="search-mini__input" value="Санкт-Петербург" />
+      <input type="date" class="search-mini__input" />
     </div>
 
-    <div class="search__button">
+    <div class="search-mini__button">
       <!-- snippets button -->
       <button class="button" type="button">
         <span class="button__text"> найти </span>
