--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -4,6 +4,7 @@
   --color-orange: #ff711f;
 
   --color-text-black: #000000;
+  --color-text-black-4: #00000066;
   --color-text-black-5: #00000080;
   --color-text-primary: #100e0e;
   --color-text-primary-25: #100e0e40;
