--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,7 +15,7 @@
 @import "blocks/search-card";
 @import "blocks/filter";
 @import "blocks/banner";
-@import "blocks/search";
+@import "blocks/search_mini";
 @import "blocks/card-institution";
 @import "blocks/card_event";
 @import "blocks/card_primary";
