add search full

--- a/src/html/includes/search-events.html
+++ b/src/html/includes/search-events.html
@@ -1,19 +1,22 @@
 <section class="search-events custom-section">
-  <a href="/map.html" class="search-events__map-link">
-    <span class="search-events__map-link-icon">
-      <!-- snippets icon_map -->
-      <svg viewBox="0 0 24 21" fill="none">
-        <path
-          d="M15.7728 4.77228V20.045M1.45459 4.77228V20.045L8.13641 16.2268L15.7728 20.045L22.4546 16.2268V0.954102L15.7728 4.77228L8.13641 0.954102L1.45459 4.77228ZM8.13641 0.954102V16.2268V0.954102Z"
-          stroke="currentColor"
-          stroke-width="1.5"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
-    </span>
-    <span class="search-events__map-link-text">Показать на карте</span>
-  </a>
+  <div class="search-events__map">
+    <a href="./search_map.html" class="search-events__map-link">
+      <span class="search-events__map-link-icon">
+        <!-- snippets icon_map -->
+        <svg viewBox="0 0 24 21" fill="none">
+          <path
+            d="M15.7728 4.77228V20.045M1.45459 4.77228V20.045L8.13641 16.2268L15.7728 20.045L22.4546 16.2268V0.954102L15.7728 4.77228L8.13641 0.954102L1.45459 4.77228ZM8.13641 0.954102V16.2268V0.954102Z"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </span>
+      <span class="search-events__map-link-text">Показать на карте</span>
+    </a>
+  </div>
+
   <div class="search-events__content">
     <div class="search-events__filter">
       <!-- snippets filter -->
