--- a/src/html/includes/search_mini.html
+++ b/src/html/includes/search_mini.html
@@ -3,6 +3,7 @@
     <div class="search-mini__inputs">
       <input type="text" class="search-mini__input" value="Санкт-Петербург" />
       <input type="date" class="search-mini__input" />
+      <input type="text" class="search-mini__input--second" placeholder="Название заведения..." />
     </div>
 
     <div class="search-mini__button">
