--- a/src/html/templates/search.html
+++ b/src/html/templates/search.html
@@ -7,6 +7,7 @@ var htmlTop = { title: "ArtTube" };
 
 
 <main>
+  <%=_.template(require('./../includes/search_mini.html').default)()%>
   <%=_.template(require('./../includes/search-events.html').default)()%>
 </main>
 
