--- a/src/scss/blocks/search_mini.scss
+++ b/src/scss/blocks/search_mini.scss
@@ -31,13 +31,26 @@
       width: 100%;
     }
   }
-  &__input {
+  &__input,
+  &__input--second {
     width: 100%;
     height: 50px;
     font-size: 18px;
     border: 1px solid var(--color-border);
-    text-align: center;
     color: var(--color-light-black);
+
+    &::placeholder {
+      color: var(--color-text-primary-25, #100e0e40);
+    }
+  }
+
+  &__input {
+    display: none;
+    text-align: center;
+  }
+
+  &__input--second {
+    padding: 0 25px;
   }
 
   &__button {
