fix event detail

--- a/src/html/includes/event-full.html
+++ b/src/html/includes/event-full.html
@@ -44,6 +44,12 @@
         <div class="event-full__tag">Алексей Князев</div>
       </div>
     </div>
+    <input
+      type="checkbox"
+      class="event-full__description-checkbox"
+      id="event-full-height"
+      checked
+    />
     <div class="event-full__description">
       <div class="event-full__description-inner">
         <p class="event-full__description-text">
@@ -86,9 +92,14 @@
         </p>
       </div>
       <div class="event-full__description-shadow">
-        <button class="event-full__description-btn" type="button" id="event-btn-more">
+        <label
+          for="event-full-height"
+          class="event-full__description-btn"
+          type="button"
+          id="event-btn-more"
+        >
           <span class="event-full__description-btn-text">Читать все</span>
-        </button>
+        </label>
       </div>
     </div>
   </div>
