--- a/src/scss/sections/event-detail.scss
+++ b/src/scss/sections/event-detail.scss
@@ -8,6 +8,7 @@
     @include media-breakpoint-between(md, xl) {
       margin-bottom: 45px;
     }
+
     @include media-breakpoint-down(md) {
       margin-bottom: 38px;
     }
@@ -41,7 +42,7 @@
     @include media-breakpoint-between(sm, lg) {
       width: 400px;
       height: 400px;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
     }
 
     @include media-breakpoint-down(sm) {
@@ -62,11 +63,11 @@
     gap: 8px;
     color: var(--color-light-black);
 
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(md) {
       margin-bottom: 50px;
     }
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       margin-bottom: 28px;
     }
   }
@@ -97,12 +98,28 @@
     line-height: 22.5px;
   }
 
+  #event-full-height {
+    display: none;
+  }
+
+  #event-full-height:checked ~ &__description > &__description-inner {
+    @include media-breakpoint-down(md) {
+      height: 300px;
+    }
+  }
+
+  #event-full-height:not(:checked) ~ &__description > &__description-shadow {
+    @include media-breakpoint-down(md) {
+      display: none;
+    }
+  }
+
   &__description {
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(md) {
       padding: 41px 57px 51px 65px;
     }
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       padding: 38px 20px 30px;
     }
   }
@@ -129,17 +146,18 @@
     box-shadow: 0 0px 30px 20px #ffffff;
     background: var(--color-bg-0, #ffffff);
 
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(md) {
       display: none;
     }
 
-    @include media-breakpoint-down(sm) {
-      display: block;
+    @include media-breakpoint-down(md) {
+      display: flex;
+      justify-content: center;
     }
   }
 
   &__description-btn {
-    display: block;
+    display: inline-block;
     border: none;
     padding: 0;
     margin: 0 auto;
